domain-home-in-image-blog/ubuntu-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-debug
  namespace: sample-domain2-ns
spec:
  restartPolicy: Never
  containers:
  - name: ubuntu
    image: "ubuntu:16.04"
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
